syntax = "proto3";

package entpb;

option go_package = "./generated";

service UserService {
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc GetUsersByIDs (GetUsersByIDsRequest) returns (GetUsersByIDsResponse);
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  string search = 3;
  string company_id = 4; 
}

message User {
  int32 id = 1; // đổi từ string sang int32
  string first_name = 2;
  string last_name = 3;
  string gender = 4;
  string email = 5;
  string phone = 6;
  string ward_code = 7;
  string address = 8;
  string company_id = 9;
  string created_at = 10;
  string updated_at = 11;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total_pages = 2;
  int32 total_users = 3;
  int32 current_page = 4;
}

message GetUserRequest {
  int32 id = 1; // đổi sang int32
}

message GetUserResponse {
  User user = 1;
}

message GetUsersByIDsRequest {
  repeated int32 ids = 1; 
  int32 page = 2;
  int32 page_size = 3;
}

message GetUsersByIDsResponse {
  repeated User users = 1;
  int32 total_count = 2;
}
